# whatsapp_agno

./: .gitignore  Dockerfile  app.py  compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
data/: asimov.md  prompt.xml
routers/: waha_router.py
scripts/: start_server.sh  start_worker.sh
services/: waha_service.py
workers/: tasks.py
